--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <body>
     <!-- Body main wrapper start -->
+
     <div class="wrapper">
       <div
         id="header"
@@ -47,13 +48,13 @@
                 <ul class="heaher__top__left">
                   <li><i class="fa fa-clock-o"></i>LIC:#13VH13026700</li>
                   <li>
-                    <a href="tel: +1 (862)903-5007" class="cs-phone"
-                      ><span class="fa fa-phone"></span>(862)903-5007
+                    <a href="tel: +1 (201)903-5007" class="cs-phone"
+                      ><span class="fa fa-phone"></span>(201)903-5007
                     </a>
                   </li>
 
                   <li>
-                    <a href="tel: +1 (862)903-5007" class="cs-phone"
+                    <a href="tel: +1 (201)903-5007" class="cs-phone"
                       ><span class="fa fa-phone"></span>24/7 SUPPORT
                     </a>
                   </li>
@@ -103,11 +104,11 @@
               </div>
               <div class="col-md-3 hidden-xs main__menu__nav">
                 <a
-                  href="tel: +1 (862)903-5007"
+                  href="tel: +1 (201)903-5007"
                   class="phone_text main__menu"
                   style="color: rgb(203, 0, 0)"
                 >
-                  <span class="fa fa-phone"></span> (862)903-5007
+                  <span class="fa fa-phone"></span> (201)903-5007
                 </a>
               </div>
             </div>
@@ -126,8 +127,8 @@
             class="slide slider__fixed--height slide__align--center"
             data--black__overlay="6"
             style="
-              background: rgba(0, 0, 0, 0) url(images/slider/bg/1.jpg) no-repeat
-                scroll 0 0 / cover;
+              background: rgba(0, 0, 0, 0) url(images/slider/bg/1920.png)
+                no-repeat scroll 0 0 / cover;
             "
           >
             <div class="container">
@@ -156,8 +157,8 @@
             class="slide slider__fixed--height slide__align--center"
             data--black__overlay="6"
             style="
-              background: rgba(0, 0, 0, 0) url(images/slider/bg/2.jpg) no-repeat
-                scroll 0 0 / cover;
+              background: rgba(0, 0, 0, 0) url(images/slider/bg/1921.jpg)
+                no-repeat scroll 0 0 / cover;
             "
           >
             <div class="container">
@@ -316,7 +317,71 @@
                 <div class="service foo">
                   <div class="service__thumb">
                     <a href="contact.html">
-                      <img src="images/service/1.jpg" alt="service images" />
+                      <img src="images/service/q00.png" style="max-width: 250px;" alt="service images" />
+                    </a>
+                    <div class="service__hover">
+                      <div class="service__action">
+                        <a href="contact.html">CONTACT US</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service__details">
+                    <h2><a href="contact.html">ROOFING</a></h2>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
+                <div class="service foo">
+                  <div class="service__thumb">
+                    <a href="contact.html">
+                      <img
+                        src="images/service/chimney.png"
+                        alt="service images"
+                      />
+                    </a>
+                    <div class="service__hover">
+                      <div class="service__action">
+                        <a href="contact.html">CONTACT US</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service__details">
+                    <h2><a href="contact.html">CHIMNEY</a></h2>
+                  </div>
+                </div>
+              </div>
+              <!-- End Single Service -->
+              <!-- Start Single Service -->
+              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
+                <div class="service foo">
+                  <div class="service__thumb">
+                    <a href="contact.html">
+                      <img
+                        src="images/service/q012.jpg" style="max-width: 250px;"
+                        alt="service images"
+                      />
+                    </a>
+                    <div class="service__hover">
+                      <div class="service__action">
+                        <a href="contact.html">CONTACT US</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service__details">
+                    <h2><a href="contact.html">GUTTERS</a></h2>
+                  </div>
+                </div>
+              </div>
+              <!-- End Single Service -->
+              <!-- Start Single Service -->
+              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
+                <div class="service foo">
+                  <div class="service__thumb">
+                    <a href="contact.html">
+                      <img
+                        src="images/service/mansory.png"
+                        alt="service images"
+                      />
                     </a>
                     <div class="service__hover">
                       <div class="service__action">
@@ -326,61 +391,6 @@
                   </div>
                   <div class="service__details">
                     <h2><a href="contact.html">CONSTRUCTION</a></h2>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
-                <div class="service foo">
-                  <div class="service__thumb">
-                    <a href="contact.html">
-                      <img src="images/service/2.jpg" alt="service images" />
-                    </a>
-                    <div class="service__hover">
-                      <div class="service__action">
-                        <a href="contact.html">CONTACT US</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="service__details">
-                    <h2><a href="contact.html">RENOVATION</a></h2>
-                  </div>
-                </div>
-              </div>
-              <!-- End Single Service -->
-              <!-- Start Single Service -->
-              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
-                <div class="service foo">
-                  <div class="service__thumb">
-                    <a href="contact.html">
-                      <img src="images/service/5.jpg" alt="service images" />
-                    </a>
-                    <div class="service__hover">
-                      <div class="service__action">
-                        <a href="contact.html">CONTACT US</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="service__details">
-                    <h2><a href="contact.html">ARCHITECTURE</a></h2>
-                  </div>
-                </div>
-              </div>
-              <!-- End Single Service -->
-              <!-- Start Single Service -->
-              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
-                <div class="service foo">
-                  <div class="service__thumb">
-                    <a href="contact.html">
-                      <img src="images/service/4.jpg" alt="service images" />
-                    </a>
-                    <div class="service__hover">
-                      <div class="service__action">
-                        <a href="contact.html">CONTACT US</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="service__details">
-                    <h2><a href="contact.html">CONCRETE SUPPLY</a></h2>
                   </div>
                 </div>
               </div>
@@ -399,7 +409,7 @@
                     </div>
                   </div>
                   <div class="service__details">
-                    <h2><a href="contact.html">ROOFING</a></h2>
+                    <h2><a href="contact.html">MANSORY</a></h2>
                   </div>
                 </div>
               </div>
@@ -407,7 +417,7 @@
                 <div class="service foo">
                   <div class="service__thumb">
                     <a href="contact.html">
-                      <img src="images/service/6.jpg" alt="service images" />
+                      <img src="images/service/2.jpg" alt="service images" />
                     </a>
                     <div class="service__hover">
                       <div class="service__action">
@@ -416,7 +426,7 @@
                     </div>
                   </div>
                   <div class="service__details">
-                    <h2><a href="contact.html">CONSULTING</a></h2>
+                    <h2><a href="contact.html">SIDING</a></h2>
                   </div>
                 </div>
               </div>
@@ -425,7 +435,7 @@
                   <div class="service__thumb">
                     <a href="contact.html">
                       <img
-                        src="images/blog/sm-img/3.jpg"
+                        src="images/service/siding.png"
                         alt="service images"
                       />
                     </a>
@@ -437,7 +447,7 @@
                   </div>
                   <div class="service__details">
                     <h2>
-                      <a href="contact.html">EXTERIOR RENOVATION</a>
+                      <a href="contact.html">ROOF RENOVATION</a>
                     </h2>
                   </div>
                 </div>
@@ -446,7 +456,10 @@
                 <div class="service foo">
                   <div class="service__thumb">
                     <a href="contact.html">
-                      <img src="images/service/8.jpg" alt="service images" />
+                      <img
+                        src="images/service/q8.jpeg"
+                        alt="service images"
+                      />
                     </a>
                     <div class="service__hover">
                       <div class="service__action">
@@ -455,7 +468,7 @@
                     </div>
                   </div>
                   <div class="service__details">
-                    <h2><a href="contact.html">PROJECT PLANNING</a></h2>
+                    <h2><a href="contact.html">ROOF INSTALLATION</a></h2>
                   </div>
                 </div>
               </div>
@@ -537,24 +550,7 @@
           <div class="row">
             <div class="htc__latest__project__wrap clearfix mt--60">
               <!-- Start Single Project -->
-              <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
-                <div class="project foo">
-                  <div class="project__thumb">
-                    <a href="single-project.html">
-                      <img
-                        src="images/latest-project/1.jpg"
-                        alt="project images"
-                      />
-                    </a>
-                    <div class="project__hover__info">
-                      <div class="project__action">
-                        <h2><a href="single-project.html">CONSTRUCTION</a></h2>
-                        <h4>DURATION : 3 MONTH</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+
               <!-- End Single Project -->
               <!-- Start Single Project -->
               <div class="col-md-3 col-lg-3 hidden-sm col-xs-12">
@@ -562,7 +558,7 @@
                   <div class="project__thumb">
                     <a href="single-project.html">
                       <img
-                        src="images/latest-project/2.jpg"
+                        src="images/lst-project-2/10.jpg"
                         alt="project images"
                       />
                     </a>
@@ -577,24 +573,7 @@
               </div>
               <!-- End Single Project -->
               <!-- Start Single Project -->
-              <div class="col-md-3 col-lg-3 hidden-sm col-xs-12">
-                <div class="project foo">
-                  <div class="project__thumb">
-                    <a href="single-project.html">
-                      <img
-                        src="images/latest-project/3.jpg"
-                        alt="project images"
-                      />
-                    </a>
-                    <div class="project__hover__info">
-                      <div class="project__action">
-                        <h2><a href="single-project.html">CONSTRUCTION</a></h2>
-                        <h4>DURATION : 6 MONTH</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+
               <!-- End Single Project -->
               <!-- Start Single Project -->
               <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
@@ -657,44 +636,10 @@
               </div>
               <!-- End Single Project -->
               <!-- Start Single Project -->
-              <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
-                <div class="project foo">
-                  <div class="project__thumb">
-                    <a href="single-project.html">
-                      <img
-                        src="images/latest-project/7.jpg"
-                        alt="project images"
-                      />
-                    </a>
-                    <div class="project__hover__info">
-                      <div class="project__action">
-                        <h2><a href="single-project.html">CONSTRUCTION</a></h2>
-                        <h4>DURATION : 6 MONTH</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+
               <!-- End Single Project -->
               <!-- Start Single Project -->
-              <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
-                <div class="project foo">
-                  <div class="project__thumb">
-                    <a href="single-project.html">
-                      <img
-                        src="images/latest-project/roof1.jpg"
-                        alt="project images"
-                      />
-                    </a>
-                    <div class="project__hover__info">
-                      <div class="project__action">
-                        <h2><a href="single-project.html">CONSTRUCTION</a></h2>
-                        <h4>DURATION : 7 MONTH</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+
               <!-- End Single Project -->
             </div>
           </div>
@@ -983,8 +928,8 @@
                   <p>Get started on your project today—request a quote now!</p>
                 </div>
                 <form
-                  action="https://formspree.io/f/xayroaaw"
-                  method="POST"
+                action="https://formspree.io/f/xpzvrybl"
+                method="POST"
                   enctype="multipart/form-data"
                 >
                   <label class="single__cl__form">
@@ -1063,7 +1008,7 @@
                 <div class="blog foo">
                   <div class="blog__thumb">
                     <a href="blog-details.html">
-                      <img src="images/blog/blog-img/2.jpg" alt="blog image" />
+                      <img src="images/lst-project-2/10.jpg" alt="blog image" />
                     </a>
                     <div class="blog__hover__info">
                       <ul class="blog__meta">
@@ -1097,7 +1042,7 @@
                 <div class="blog foo">
                   <div class="blog__thumb">
                     <a href="blog-details.html">
-                      <img src="images/blog/blog-img/3.jpg" alt="blog image" />
+                      <img src="images/lst-project-3/4.jpg" alt="blog image" />
                     </a>
                     <div class="blog__hover__info">
                       <ul class="blog__meta">
@@ -1282,14 +1227,14 @@
                   </div>
                   <div class="ht__address__details">
                     <p>
-                      <a href="tel: +1 (862)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> +1 (862) 903-5007
+                      <a href="tel: +1 (201)903-5007" class="cs-phone"
+                        ><span class="fa fa-phone"></span> +1 (201) 903-5007
                       </a>
                     </p>
                     <p>
-                      <a href="tel: +1 (862)903-5007" class="cs-phone"
+                      <a href="tel: +1 (201)903-5007" class="cs-phone"
                         ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp;
-                        (862)903-5007
+                        (201)903-5007
                       </a>
                     </p>
                   </div>
