--- a/service.html
+++ b/service.html
@@ -33,13 +33,13 @@
                 <ul class="heaher__top__left">
                   <li><i class="fa fa-clock-o"></i>LIC:#13VH13026700</li>
                   <li>
-                    <a href="tel: +1 (862)903-5007" class="cs-phone"
-                      ><span class="fa fa-phone"></span>(862)903-5007
+                    <a href="tel: +1 (201)903-5007" class="cs-phone"
+                      ><span class="fa fa-phone"></span>(201)903-5007
                     </a>
                   </li>
 
                   <li>
-                    <a href="tel: +1 (862)903-5007" class="cs-phone"
+                    <a href="tel: +1 (201)903-5007" class="cs-phone"
                       ><span class="fa fa-phone"></span>24/7 SUPPORT
                     </a>
                   </li>
@@ -89,11 +89,11 @@
               </div>
               <div class="col-md-3 hidden-xs main__menu__nav">
                 <a
-                  href="tel: +1 (862)903-5007"
+                  href="tel: +1 (201)903-5007"
                   class="phone_text main__menu"
                   style="color: rgb(203, 0, 0)"
                 >
-                  <span class="fa fa-phone"></span> (862)903-5007
+                  <span class="fa fa-phone"></span> (201)903-5007
                 </a>
               </div>
             </div>
@@ -107,7 +107,7 @@
         class="ht__bradcaump__area"
         data--black__overlay="6"
         style="
-          background: rgba(0, 0, 0, 0) url(images/bg/5.jpg) no-repeat scroll
+          background: rgba(0, 0, 0, 0) url(images/bg/back.png) no-repeat scroll
             center center / cover;
         "
       >
@@ -203,7 +203,71 @@
                 <div class="service foo">
                   <div class="service__thumb">
                     <a href="contact.html">
-                      <img src="images/service/1.jpg" alt="service images" />
+                      <img src="images/service/q00.png" style="max-width: 250px;" alt="service images" />
+                    </a>
+                    <div class="service__hover">
+                      <div class="service__action">
+                        <a href="contact.html">CONTACT US</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service__details">
+                    <h2><a href="contact.html">ROOFING</a></h2>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
+                <div class="service foo">
+                  <div class="service__thumb">
+                    <a href="contact.html">
+                      <img
+                        src="images/service/chimney.png"
+                        alt="service images"
+                      />
+                    </a>
+                    <div class="service__hover">
+                      <div class="service__action">
+                        <a href="contact.html">CONTACT US</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service__details">
+                    <h2><a href="contact.html">CHIMNEY</a></h2>
+                  </div>
+                </div>
+              </div>
+              <!-- End Single Service -->
+              <!-- Start Single Service -->
+              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
+                <div class="service foo">
+                  <div class="service__thumb">
+                    <a href="contact.html">
+                      <img
+                        src="images/service/q012.jpg" style="max-width: 250px;"
+                        alt="service images"
+                      />
+                    </a>
+                    <div class="service__hover">
+                      <div class="service__action">
+                        <a href="contact.html">CONTACT US</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="service__details">
+                    <h2><a href="contact.html">GUTTERS</a></h2>
+                  </div>
+                </div>
+              </div>
+              <!-- End Single Service -->
+              <!-- Start Single Service -->
+              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
+                <div class="service foo">
+                  <div class="service__thumb">
+                    <a href="contact.html">
+                      <img
+                        src="images/service/mansory.png"
+                        alt="service images"
+                      />
                     </a>
                     <div class="service__hover">
                       <div class="service__action">
@@ -213,61 +277,6 @@
                   </div>
                   <div class="service__details">
                     <h2><a href="contact.html">CONSTRUCTION</a></h2>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
-                <div class="service foo">
-                  <div class="service__thumb">
-                    <a href="contact.html">
-                      <img src="images/service/2.jpg" alt="service images" />
-                    </a>
-                    <div class="service__hover">
-                      <div class="service__action">
-                        <a href="contact.html">CONTACT US</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="service__details">
-                    <h2><a href="contact.html">RENOVATION</a></h2>
-                  </div>
-                </div>
-              </div>
-              <!-- End Single Service -->
-              <!-- Start Single Service -->
-              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
-                <div class="service foo">
-                  <div class="service__thumb">
-                    <a href="contact.html">
-                      <img src="images/service/5.jpg" alt="service images" />
-                    </a>
-                    <div class="service__hover">
-                      <div class="service__action">
-                        <a href="contact.html">CONTACT US</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="service__details">
-                    <h2><a href="contact.html">ARCHITECTURE</a></h2>
-                  </div>
-                </div>
-              </div>
-              <!-- End Single Service -->
-              <!-- Start Single Service -->
-              <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
-                <div class="service foo">
-                  <div class="service__thumb">
-                    <a href="contact.html">
-                      <img src="images/service/4.jpg" alt="service images" />
-                    </a>
-                    <div class="service__hover">
-                      <div class="service__action">
-                        <a href="contact.html">CONTACT US</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="service__details">
-                    <h2><a href="contact.html">CONCRETE SUPPLY</a></h2>
                   </div>
                 </div>
               </div>
@@ -286,7 +295,7 @@
                     </div>
                   </div>
                   <div class="service__details">
-                    <h2><a href="contact.html">ROOFING</a></h2>
+                    <h2><a href="contact.html">MANSORY</a></h2>
                   </div>
                 </div>
               </div>
@@ -294,7 +303,7 @@
                 <div class="service foo">
                   <div class="service__thumb">
                     <a href="contact.html">
-                      <img src="images/service/6.jpg" alt="service images" />
+                      <img src="images/service/2.jpg" alt="service images" />
                     </a>
                     <div class="service__hover">
                       <div class="service__action">
@@ -303,7 +312,7 @@
                     </div>
                   </div>
                   <div class="service__details">
-                    <h2><a href="contact.html">CONSULTING</a></h2>
+                    <h2><a href="contact.html">SIDING</a></h2>
                   </div>
                 </div>
               </div>
@@ -312,7 +321,7 @@
                   <div class="service__thumb">
                     <a href="contact.html">
                       <img
-                        src="images/blog/sm-img/3.jpg"
+                        src="images/service/siding.png"
                         alt="service images"
                       />
                     </a>
@@ -324,7 +333,7 @@
                   </div>
                   <div class="service__details">
                     <h2>
-                      <a href="contact.html">EXTERIOR RENOVATION</a>
+                      <a href="contact.html">ROOF RENOVATION</a>
                     </h2>
                   </div>
                 </div>
@@ -333,7 +342,10 @@
                 <div class="service foo">
                   <div class="service__thumb">
                     <a href="contact.html">
-                      <img src="images/service/8.jpg" alt="service images" />
+                      <img
+                        src="images/service/q8.jpeg"
+                        alt="service images"
+                      />
                     </a>
                     <div class="service__hover">
                       <div class="service__action">
@@ -342,7 +354,7 @@
                     </div>
                   </div>
                   <div class="service__details">
-                    <h2><a href="contact.html">PROJECT PLANNING</a></h2>
+                    <h2><a href="contact.html">ROOF INSTALLATION</a></h2>
                   </div>
                 </div>
               </div>
@@ -429,8 +441,8 @@
                   <p>Get started on your project today—request a quote now!</p>
                 </div>
                 <form
-                  action="https://formspree.io/f/xayroaaw"
-                  method="POST"
+                action="https://formspree.io/f/xpzvrybl"
+                method="POST"
                   enctype="multipart/form-data"
                 >
                   <label class="single__cl__form">
@@ -568,13 +580,13 @@
                   </div>
                   <div class="ht__address__details">
                     <p>
-                      <a href="tel: +1 (862)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> +1 (862) 903-5007
+                      <a href="tel: +1 (201)903-5007" class="cs-phone"
+                        ><span class="fa fa-phone"></span> +1 (201) 903-5007
                       </a>
                     </p>
                     <p>
-                      <a href="tel: +1 (862)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp; (862)903-5007
+                      <a href="tel: +1 (201)903-5007" class="cs-phone"
+                        ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp; (201)903-5007
                       </a>
                     </p>
                   </div>
@@ -583,11 +595,7 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <!-- End Contact Address -->
-      <!-- Start Footer Area -->
-      <footer class="htc__footer__area">
+        </div>    <footer class="htc__footer__area">
         <div
           class="footer__top ptb--130"
           data--1f2d30__overlay="9.5"
@@ -725,6 +733,10 @@
           </div>
         </div>
       </footer>
+      </div>
+      <!-- End Contact Address -->
+      <!-- Start Footer Area -->
+  
       <!-- End Footer Area -->
     </div>
     <script src="js/vendor/jquery-1.12.0.min.js"></script>
