--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@
                 <ul class="heaher__top__left">
                   <li><i class="fa fa-clock-o"></i>LIC:#13VH13026700</li>
                   <li>
-                    <a href="tel: +1 (862)903-5007" class="cs-phone"
-                      ><span class="fa fa-phone"></span>(862)903-5007
+                    <a href="tel: +1 (201)903-5007" class="cs-phone"
+                      ><span class="fa fa-phone"></span>(201)903-5007
                     </a>
                   </li>
 
                   <li>
-                    <a href="tel: +1 (862)903-5007" class="cs-phone"
+                    <a href="tel: +1 (201)903-5007" class="cs-phone"
                       ><span class="fa fa-phone"></span>24/7 SUPPORT
                     </a>
                   </li>
@@ -89,11 +89,11 @@
               </div>
               <div class="col-md-3 hidden-xs main__menu__nav">
                 <a
-                  href="tel: +1 (862)903-5007"
+                  href="tel: +1 (201)903-5007"
                   class="phone_text main__menu"
                   style="color: rgb(203, 0, 0)"
                 >
-                  <span class="fa fa-phone"></span> (862)903-5007
+                  <span class="fa fa-phone"></span> (201)903-5007
                 </a>
               </div>
             </div>
@@ -109,7 +109,7 @@
         class="ht__bradcaump__area"
         data--black__overlay="6"
         style="
-          background: rgba(0, 0, 0, 0) url(images/bg/5.jpg) no-repeat scroll
+          background: rgba(0, 0, 0, 0) url(images/bg/back.png) no-repeat scroll
             center center / cover;
         "
       >
@@ -167,14 +167,14 @@
                   </div>
                   <div class="ct__details">
                     <p>
-                      <a href="tel: +1 (862)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> +1 (862) 903-5007
+                      <a href="tel: +1 (201)903-5007" class="cs-phone"
+                        ><span class="fa fa-phone"></span> +1 (201) 903-5007
                       </a>
                     </p>
                     <p>
-                      <a href="tel: +1 (862)903-5007" class="cs-phone"
+                      <a href="tel: +1 (201)903-5007" class="cs-phone"
                         ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp;
-                        (862)903-5007
+                        (201)903-5007
                       </a>
                     </p>
                   </div>
@@ -209,8 +209,8 @@
                 <h2 class="title__line--5">SEND US A MESSAGE</h2>
                 <div class="contact-form-wrap">
                   <form
-                    action="https://formspree.io/f/xayroaaw"
-                    method="POST"
+                  action="https://formspree.io/f/xpzvrybl"
+                  method="POST"
                     enctype="multipart/form-data"
                   >
                     <label class="single__cl__form">
@@ -353,14 +353,14 @@
                   </div>
                   <div class="ht__address__details">
                     <p>
-                      <a href="tel: +1 (862)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> +1 (862) 903-5007
+                      <a href="tel: +1 (201)903-5007" class="cs-phone"
+                        ><span class="fa fa-phone"></span> +1 (201) 903-5007
                       </a>
                     </p>
                     <p>
-                      <a href="tel: +1 (862)903-5007" class="cs-phone"
+                      <a href="tel: +1 (201)903-5007" class="cs-phone"
                         ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp;
-                        (862)903-5007
+                        (201)903-5007
                       </a>
                     </p>
                   </div>
