--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
                     />
                     <div class="project__hover__info">
                       <div class="project__action">
-                        <h2><a href="https://powerful-construction.com/blog-post">CONSTRUCTION</a></h2>
-                        <h4><a href="https://powerful-construction.com/blog-post">DURATION : 7 MONTH</a>/h4>
+                        <h2>CONSTRUCTION</h2>
+                        <h4>DURATION : 7 MONTH</h4>
                       </div>
                     </div>
                   </div>
@@ -668,8 +668,8 @@
                     />
                     <div class="project__hover__info">
                       <div class="project__action">
-                        <h2><a href="https://powerful-construction.com/blog-post">CONSTRUCTION</a></h2>
-                        <h4><a href="https://powerful-construction.com/blog-post">DURATION : 13 MONTH</a></h4>
+                        <h2>CONSTRUCTION</h2>
+                        <h4>DURATION : 13 MONTH</h4>
                       </div>
                     </div>
                   </div>
@@ -686,8 +686,8 @@
                     />
                     <div class="project__hover__info">
                       <div class="project__action">
-                        <h2><a href="https://powerful-construction.com/blog-post">CONSTRUCTION</a></h2>
-                        <h4><a href="https://powerful-construction.com/blog-post">DURATION : 1 Year</a>h4>
+                        <h2>CONSTRUCTION</h2>
+                        <h4>DURATION : 1 Year</h4>
                       </div>
                     </div>
                   </div>
@@ -1071,7 +1071,7 @@
                     <img src="images/blog/blog-img/1.jpg" alt="blog image" />
                     <div class="blog__hover__info">
                       <ul class="blog__meta">
-                        <li>By : POWERFUL CONSTRUCTION LLC</li>
+                        <li><a href="https://powerful-construction.com/blog-post">By : POWERFUL CONSTRUCTION LLC</a></li>
                         <li>20 MARCH</li>
                       </ul>
                     </div>
@@ -1094,7 +1094,7 @@
                     <img src="images/lst-project-2/10.jpg" alt="blog image" />
                     <div class="blog__hover__info">
                       <ul class="blog__meta">
-                        <li>By : POWERFUL CONSTRUCTION LLC</li>
+                        <li><a href="https://powerful-construction.com/blog-post">By : POWERFUL CONSTRUCTION LLC</a></li>
                         <li>20 MARCH</li>
                       </ul>
                     </div>
@@ -1118,7 +1118,7 @@
                     <img src="images/lst-project-3/4.jpg" alt="blog image" />
                     <div class="blog__hover__info">
                       <ul class="blog__meta">
-                        <li>By : POWERFUL CONSTRUCTION LLC</li>
+                        <li><a href="https://powerful-construction.com/blog-post">By : POWERFUL CONSTRUCTION LLC</a></li>
                         <li>20 MARCH</li>
                       </ul>
                     </div>
